[package]

name = "geohash"
version = "0.12.0"
authors = [ "Ning Sun <sunng@about.me>" ]
description = "Geohash implementation for Rust."
license = "MIT/Apache-2.0"
keywords = ["geohash", "gis", "geography"]
repository = "https://github.com/georust/geohash.rs"
readme = "README.md"
documentation = "https://docs.rs/geohash/"
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
fixed = { package = "substrate-fixed", tag = "v0.5.8", default-features = false, git = "https://github.com/encointer/substrate-fixed" }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
